# intersection-area-calculator

./: .gitignore  CMakeLists.txt  README.md
include/: constants.hpp  error.hpp  intersection_area.hpp  output.hpp  point.hpp  shape.hpp
src/: error.cpp  intersection_area.cpp  output.cpp  point.cpp  shape.cpp
